force-app/main/default/objects/Account/fields/AccountingContact__c.field-meta.xml
<CustomField>
    <fullName>AccountingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact for accounting and invoices on the part of partners</description>
    <inlineHelpText>Contact for accounting and invoices on the part of partners</inlineHelpText>
    <label>Accounting contact - invoice mails</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.ParentId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Accounting contact - invoice mails)</relationshipLabel>
    <relationshipName>AccountsAccountingContact</relationshipName>
    <type>Lookup</type>
</CustomField>