force-app/main/default/objects/Account/fields/ActiveOnOtherMarketplaces__c.field-meta.xml
<CustomField>
    <fullName>ActiveOnOtherMarketplaces__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active on other Marketplaces</label>
    <type>Checkbox</type>
</CustomField>