force-app/main/default/objects/Account/fields/AdminContact3__c.field-meta.xml
<CustomField>
    <fullName>AdminContact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional contact the technical contact person</description>
    <inlineHelpText>Additional contact the technical contact person</inlineHelpText>
    <label>Admin contact 3</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The contact does not belong to the associated company for this partner integration.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Admin contact 3)</relationshipLabel>
    <relationshipName>AccountsAdminContact3</relationshipName>
    <type>Lookup</type>
</CustomField>