force-app/main/default/objects/Account/fields/Admincontact__c.field-meta.xml
<CustomField>
    <fullName>Admincontact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact the technical contact person</description>
    <inlineHelpText>Contact the technical contact person</inlineHelpText>
    <label>Admin contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Admin contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>