force-app/main/default/objects/Account/fields/AdminContactEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>AdminContactEmailAddresses__c</fullName>
    <description>Help field for the power automate integration</description>
    <formula>TRIM(
Admincontact__r.Email &amp;
IF(NOT(ISBLANK(AdminContact2__r.Email)), &quot;; &quot; &amp; AdminContact2__r.Email, &quot;&quot;) &amp;
IF(NOT(ISBLANK(AdminContact3__r.Email)), &quot;; &quot; &amp; AdminContact3__r.Email, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin contact email addresses</label>
    <type>Text</type>
</CustomField>