force-app/main/default/objects/Account/fields/AdSalesCampaignManager__c.field-meta.xml
<CustomField>
    <fullName>AdSalesCampaignManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdSales Campaign Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsAdSalesCampaignManager</relationshipName>
    <type>Lookup</type>
</CustomField>