force-app/main/default/objects/Account/fields/AdSalesCategory__c.field-meta.xml
<CustomField>
    <fullName>AdSalesCategory__c</fullName>
    <label>AdSales Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AdSales_Category</valueSetName>
    </valueSet>
</CustomField>