force-app/main/default/objects/Account/fields/AdSalesCheck__c.field-meta.xml
<CustomField>
    <fullName>AdSalesCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Retail: Is the partner interested in AdSales?</inlineHelpText>
    <label>AdSales Check</label>
    <type>Checkbox</type>
</CustomField>