force-app/main/default/objects/Account/fields/AdSalesManager__c.field-meta.xml
<CustomField>
    <fullName>AdSalesManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>(Fashion, Tracht - Susanne Kluka)
(Baby/Kids , Accessoires- Joanna Osyda-Koberska)
(Wäsche, Schuhe - Katharina Wischmann)
(Home &amp; Living - Lina Brandes)
(Outdoor, Sport - Joffrey Bauer)</inlineHelpText>
    <label>AdSales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsAdSalesManager</relationshipName>
    <type>Lookup</type>
</CustomField>