force-app/main/default/objects/Account/fields/AdSalesStatus__c.field-meta.xml
<CustomField>
    <fullName>AdSalesStatus__c</fullName>
    <label>AdSales Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AdSalesStatus</valueSetName>
    </valueSet>
</CustomField>