force-app/main/default/objects/Account/fields/ArticlesWithBatteries__c.field-meta.xml
<CustomField>
    <fullName>ArticlesWithBatteries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Articles with batteries</label>
    <type>Checkbox</type>
</CustomField>