force-app/main/default/objects/Account/fields/Backend__c.field-meta.xml
<CustomField>
    <fullName>Backend__c</fullName>
    <description>The Manager can see which interface the merchant is connected to the limango marketplace.</description>
    <inlineHelpText>Initially, the backend type is taken from the contract. After an interface change, the information comes from the integration record and is updated automatically.</inlineHelpText>
    <label>Backend</label>
    <length>200</length>
    <type>Text</type>
</CustomField>