force-app/main/default/objects/Account/fields/BatteryRegistrationNumberGermany__c.field-meta.xml
<CustomField>
    <fullName>BatteryRegistrationNumberGermany__c</fullName>
    <label>Battery registration number (Germany)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>