force-app/main/default/objects/Account/fields/Business_Unit_AdSales_Invest__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_AdSales_Invest__c</fullName>
    <label>Business Unit AdSales Invest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>external</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>