force-app/main/default/objects/Account/fields/BusinessCase__c.field-meta.xml
<CustomField>
    <fullName>BusinessCase__c</fullName>
    <label>Business Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>