force-app/main/default/objects/Account/fields/BuyerPurchaserManager__c.field-meta.xml
<CustomField>
    <fullName>BuyerPurchaserManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer / Purchaser Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsBuyerPurchaserManager</relationshipName>
    <type>Lookup</type>
</CustomField>