force-app/main/default/objects/Account/fields/CommercialCountry__c.field-meta.xml
<CustomField>
    <fullName>CommercialCountry__c</fullName>
    <label>Commercial Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CommercialCountry</valueSetName>
    </valueSet>
</CustomField>