force-app/main/default/objects/Account/fields/CommercialRegisterLocation__c.field-meta.xml
<CustomField>
    <fullName>CommercialRegisterLocation__c</fullName>
    <label>Commercial register location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>