force-app/main/default/objects/Account/fields/CommercialRegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercialRegisterNumber__c</fullName>
    <label>Commercial register number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>