force-app/main/default/objects/Account/fields/ConnectionType__c.field-meta.xml
<CustomField>
    <fullName>ConnectionType__c</fullName>
    <description>Via automation will be  the most recent connection type displayed. The Manager can see which interface the merchant is connected to the limango marketplace.</description>
    <inlineHelpText>Initially, the connection type is taken from the contract. After an interface change, the information comes from the integration record and is updated automatically.</inlineHelpText>
    <label>Connection Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>