force-app/main/default/objects/Account/fields/ConnectionTypePotential__c.field-meta.xml
<CustomField>
    <fullName>ConnectionTypePotential__c</fullName>
    <label>Connection Type Potential</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConnectionType</valueSetName>
    </valueSet>
</CustomField>