force-app/main/default/objects/Account/fields/ContentPriorizationGoldenRecord__c.field-meta.xml
<CustomField>
    <fullName>ContentPriorizationGoldenRecord__c</fullName>
    <label>Content Priorization Golden Record</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>