force-app/main/default/objects/Account/fields/CreateBrands__c.field-meta.xml
<CustomField>
    <fullName>CreateBrands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Brands</label>
    <type>Checkbox</type>
</CustomField>