force-app/main/default/objects/Account/fields/CustomerServiceEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerServiceEmail__c</fullName>
    <label>Customer Service Email</label>
    <type>Email</type>
</CustomField>