force-app/main/default/objects/Account/fields/CustomerServicePhone__c.field-meta.xml
<CustomField>
    <fullName>CustomerServicePhone__c</fullName>
    <label>Customer Service Phone</label>
    <type>Phone</type>
</CustomField>