force-app/main/default/objects/Account/fields/DataProvider__c.field-meta.xml
<CustomField>
    <fullName>DataProvider__c</fullName>
    <label>Data Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConnectionType</valueSetName>
    </valueSet>
</CustomField>