force-app/main/default/objects/Account/fields/DeliveryNoteInThePackage__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNoteInThePackage__c</fullName>
    <label>Deliverynote in the package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>