force-app/main/default/objects/Account/fields/DemandEstimationSales__c.field-meta.xml
<CustomField>
    <fullName>DemandEstimationSales__c</fullName>
    <label>Demand Estimation Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>