force-app/main/default/objects/Account/fields/DemandTargetFy__c.field-meta.xml
<CustomField>
    <fullName>DemandTargetFy__c</fullName>
    <label>Demand Target FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>