force-app/main/default/objects/Account/fields/DescriptionRetail__c.field-meta.xml
<CustomField>
    <fullName>DescriptionRetail__c</fullName>
    <label>Description Retail</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>