force-app/main/default/objects/Account/fields/DetailedAssortmentInfo__c.field-meta.xml
<CustomField>
    <fullName>DetailedAssortmentInfo__c</fullName>
    <inlineHelpText>Number of articles (planned for live operation, total) General stocks, assortment breakdown etc.)</inlineHelpText>
    <label>Detailed Assortment Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>