force-app/main/default/objects/Account/fields/Discounting__c.field-meta.xml
<CustomField>
    <fullName>Discounting__c</fullName>
    <label>Discounting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PermanentDiscount</fullName>
                <label>Permanent Discount</label>
            </value>
            <value>
                <fullName>CampaignBasedDiscount only</fullName>
                <label>Campaign-based Discount only</label>
            </value>
            <value>
                <fullName>FullPrice</fullName>
                <label>Full-Price</label>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>