force-app/main/default/objects/Account/fields/ElectronicArticles__c.field-meta.xml
<CustomField>
    <fullName>ElectronicArticles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic articles</label>
    <type>Checkbox</type>
</CustomField>