force-app/main/default/objects/Account/fields/EspoId__c.field-meta.xml
<CustomField>
    <fullName>EspoId__c</fullName>
    <externalId>true</externalId>
    <label>ESPO ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>