force-app/main/default/objects/Account/fields/EudrRelevance__c.field-meta.xml
<CustomField>
    <fullName>EudrRelevance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EUDR-relevance</label>
    <type>Checkbox</type>
</CustomField>