force-app/main/default/objects/Account/fields/EuWarehouse__c.field-meta.xml
<CustomField>
    <fullName>EuWarehouse__c</fullName>
    <label>EU warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>