force-app/main/default/objects/Account/fields/Free_Shipping_Limit_DE__c.field-meta.xml
<CustomField>
    <fullName>Free_Shipping_Limit_DE__c</fullName>
    <label>Free Shipping Limit DE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FreeShippingLimit</valueSetName>
    </valueSet>
</CustomField>