force-app/main/default/objects/Account/fields/FreeReturn__c.field-meta.xml
<CustomField>
    <fullName>FreeReturn__c</fullName>
    <label>Free Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>