force-app/main/default/objects/Account/fields/FreeShippingAT__c.field-meta.xml
<CustomField>
    <fullName>FreeShippingAT__c</fullName>
    <inlineHelpText>If no shipping to AT, leave this field blank.</inlineHelpText>
    <label>Free Shipping AT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>