force-app/main/default/objects/Account/fields/FreeShippingDE__c.field-meta.xml
<CustomField>
    <fullName>FreeShippingDE__c</fullName>
    <label>Free Shipping DE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>