force-app/main/default/objects/Account/fields/GameChanger__c.field-meta.xml
<CustomField>
    <fullName>GameChanger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Game Changer</label>
    <type>Checkbox</type>
</CustomField>