force-app/main/default/objects/Account/fields/GermanArticleData__c.field-meta.xml
<CustomField>
    <fullName>GermanArticleData__c</fullName>
    <label>German Article Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>