force-app/main/default/objects/Account/fields/GlnGlobalLocationNumber__c.field-meta.xml
<CustomField>
    <fullName>GlnGlobalLocationNumber__c</fullName>
    <label>GLN (Global Location Number)</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>