force-app/main/default/objects/Account/fields/GrossDemandPaFinalExpectation__c.field-meta.xml
<CustomField>
    <fullName>GrossDemandPaFinalExpectation__c</fullName>
    <label>(Gross) Demand (p.a.)(final expectation)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>