force-app/main/default/objects/Account/fields/InactiveOpportunityReasons__c.field-meta.xml
<CustomField>
    <fullName>InactiveOpportunityReasons__c</fullName>
    <label>Inactive Opportunity Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CancellationReason</valueSetName>
    </valueSet>
</CustomField>