force-app/main/default/objects/Account/fields/IntegrationManager__c.field-meta.xml
<CustomField>
    <fullName>IntegrationManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsIntegrationManager</relationshipName>
    <type>Lookup</type>
</CustomField>