force-app/main/default/objects/Account/fields/InterestInAdSales__c.field-meta.xml
<CustomField>
    <fullName>InterestInAdSales__c</fullName>
    <inlineHelpText>Marketplace: Is the partner interested in AdSales?</inlineHelpText>
    <label>Interest in AdSales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>