force-app/main/default/objects/Account/fields/InterestInCampaigns__c.field-meta.xml
<CustomField>
    <fullName>InterestInCampaigns__c</fullName>
    <label>Interest in Campaigns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>