force-app/main/default/objects/Account/fields/InterestInRetailCooperation__c.field-meta.xml
<CustomField>
    <fullName>InterestInRetailCooperation__c</fullName>
    <label>Interest in Retail cooperation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>