force-app/main/default/objects/Account/fields/limango_Assortment__c.field-meta.xml
<CustomField>
    <fullName>limango_Assortment__c</fullName>
    <formula>CASE(
Backend__c,
&quot;Merchant Center&quot;,
&quot;https://www.limango.de/shop/products?merchantId=&quot; &amp; MerchantId__c,
&quot;Mirakl&quot;,
&quot;https://www.limango.de/shop/products?merchantId=100&quot; &amp; MerchantId__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>limango Assortment</label>
    <type>Text</type>
</CustomField>