force-app/main/default/objects/Account/fields/LinkAssortmentOtherMarketplaces__c.field-meta.xml
<CustomField>
    <fullName>LinkAssortmentOtherMarketplaces__c</fullName>
    <label>Link Assortment other Marketplaces</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>