force-app/main/default/objects/Account/fields/ListingOfCurrentMarketPrices__c.field-meta.xml
<CustomField>
    <fullName>ListingOfCurrentMarketPrices__c</fullName>
    <label>Listing of current market prices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>