force-app/main/default/objects/Account/fields/LucidNumber__c.field-meta.xml
<CustomField>
    <fullName>LucidNumber__c</fullName>
    <label>LUCID number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>