force-app/main/default/objects/Account/fields/MeasuresGoalAchievementFy__c.field-meta.xml
<CustomField>
    <fullName>MeasuresGoalAchievementFy__c</fullName>
    <label>Measures Goal Achievement FY</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>