force-app/main/default/objects/Account/fields/MerchantId__c.field-meta.xml
<CustomField>
    <fullName>MerchantId__c</fullName>
    <externalId>true</externalId>
    <label>Merchant ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>