force-app/main/default/objects/Account/fields/NumberArticles__c.field-meta.xml
<CustomField>
    <fullName>NumberArticles__c</fullName>
    <label>Number Articles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>