force-app/main/default/objects/Account/fields/NumberSkus__c.field-meta.xml
<CustomField>
    <fullName>NumberSkus__c</fullName>
    <label>Number SKUs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>