force-app/main/default/objects/Account/fields/OnHoldReason__c.field-meta.xml
<CustomField>
    <fullName>OnHoldReason__c</fullName>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WarehouseRelocation</fullName>
                <label>Warehouse Relocation</label>
            </value>
            <value>
                <fullName>TechnicalChanges</fullName>
                <label>Technical Changes</label>
            </value>
            <value>
                <fullName>InterfaceTermination</fullName>
                <label>Interface Termination</label>
            </value>
            <value>
                <fullName>TerminationByPartnerHighReturnRate</fullName>
                <label>Termination by Partner – High Return Rate</label>
            </value>
            <value>
                <fullName>TerminationByLimangoHighReturnRate</fullName>
                <label>Termination by Limango – High Return Rate</label>
            </value>
            <value>
                <fullName>HighNoShips</fullName>
                <label>High No-Ships</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>