force-app/main/default/objects/Account/fields/PartnerHistory__c.field-meta.xml
<CustomField>
    <fullName>PartnerHistory__c</fullName>
    <label>Partner History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>