force-app/main/default/objects/Account/fields/PartnerStatus__c.field-meta.xml
<CustomField>
    <fullName>PartnerStatus__c</fullName>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NewPartner</fullName>
                <label>New Partner</label>
            </value>
            <value>
                <fullName>BaselinePartner</fullName>
                <label>Baseline Partner</label>
            </value>
            <value>
                <fullName>CampaignPartner</fullName>
                <label>Campaign Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>