force-app/main/default/objects/Account/fields/PartnerStrategy__c.field-meta.xml
<CustomField>
    <fullName>PartnerStrategy__c</fullName>
    <label>Partner Strategy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ClearanceOfOldStock</fullName>
                <label>Clearance of old stock</label>
            </value>
            <value>
                <fullName>FullPriceAssortment</fullName>
                <label>Full-price assortment</label>
            </value>
            <value>
                <fullName>BrandAwarenessBuilding</fullName>
                <label>Brand awareness/building</label>
            </value>
            <value>
                <fullName>OverstockClearance</fullName>
                <label>Overstock clearance</label>
            </value>
            <value>
                <fullName>SeasonalAssortment</fullName>
                <label>Seasonal assortment</label>
            </value>
            <value>
                <fullName>ExpansionOfOtherMarketplaces</fullName>
                <label>Expansion of other marketplaces</label>
            </value>
            <value>
                <fullName>Internationalization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>