force-app/main/default/objects/Account/fields/Possibilityofonboardingvia__c.field-meta.xml
<CustomField>
    <fullName>Possibilityofonboardingvia__c</fullName>
    <label>Possibility of Onboarding via</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>