force-app/main/default/objects/Account/fields/PotentialActivationDate__c.field-meta.xml
<CustomField>
    <fullName>PotentialActivationDate__c</fullName>
    <label>Potential Activation Date</label>
    <type>Date</type>
</CustomField>