force-app/main/default/objects/Account/fields/PreferredGoLiveDate__c.field-meta.xml
<CustomField>
    <fullName>PreferredGoLiveDate__c</fullName>
    <label>Preferred Go-Live Date</label>
    <type>Date</type>
</CustomField>