force-app/main/default/objects/Account/fields/Priority_Category__c.field-meta.xml
<CustomField>
    <fullName>Priority_Category__c</fullName>
    <label>Priority Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category</valueSetName>
    </valueSet>
</CustomField>