force-app/main/default/objects/Account/fields/PriorityIntegration__c.field-meta.xml
<CustomField>
    <fullName>PriorityIntegration__c</fullName>
    <label>Priority Integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>