force-app/main/default/objects/Account/fields/ProductActivationContact2__c.field-meta.xml
<CustomField>
    <fullName>ProductActivationContact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional person who will be contacted in the event of issues during product activation.</description>
    <inlineHelpText>Additional person who will be contacted in the event of issues during product activation.</inlineHelpText>
    <label>Product Activation contact 2</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The contact does not belong to the associated company for this partner integration.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Product Activation contact 2)</relationshipLabel>
    <relationshipName>AccountsProductActivationContact2</relationshipName>
    <type>Lookup</type>
</CustomField>