force-app/main/default/objects/Account/fields/ProductActivationContact3__c.field-meta.xml
<CustomField>
    <fullName>ProductActivationContact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional person who will be contacted in the event of issues during product activation.</description>
    <inlineHelpText>Additional person who will be contacted in the event of issues during product activation.</inlineHelpText>
    <label>Product Activation contact 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Product Activation contact 3)</relationshipLabel>
    <relationshipName>AccountsProductActivationContact3</relationshipName>
    <type>Lookup</type>
</CustomField>